fix: resolve all linter issues
  - Use node: protocol for Node.js imports
  - Replace forEach with for...of loops
  - Use template literals over concatenation
  - Fix biome configuration format
  - Replace any types with proper interfaces

--- a/biome.json
+++ b/biome.json
@@ -37,7 +37,18 @@
     }
   },
   "files": {
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json"],
-    "experimentalScannerIgnores": ["node_modules", "dist", ".next", "coverage", "*.min.js", "docs"]
+    "includes": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx",
+      "**/*.json",
+      "!**/node_modules",
+      "!**/dist",
+      "!**/.next",
+      "!**/coverage",
+      "!**/*.min.js",
+      "!**/docs"
+    ]
   }
 }
