fix: adjust sleep test timing for CI and update release workflow
- Relaxed sleep test timing tolerance from 100ms to 95ms for CI compatibility
- Updated release workflow to only trigger on git tags (v*) instead of main branch pushes
- Simplified workflow to direct npm publish when tagged

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -41,21 +41,7 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: bun run release
-          version: bun run version
-          commit: "chore: release"
-          title: "chore: release"
-          createGithubReleases: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Publish with Bun if not using changesets
-        if: steps.changesets.outputs.published != 'true' && startsWith(github.ref, 'refs/tags/v')
+      - name: Publish to npm
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           bunx npm publish --access public
