feat: rename package to openfigi-sdk
- Update package name from figi-sdk to openfigi-sdk
- Update all references in README.md
- Bump version to 1.0.3 for the name change
- All tests passing and build successful

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "figi-sdk",
-  "version": "1.0.2",
+  "name": "openfigi-sdk",
+  "version": "1.0.3",
   "description": "Unofficial TypeScript SDK for OpenFIGI API - Map financial identifiers to FIGIs (community-maintained)",
   "type": "module",
   "main": "./dist/index.js",
