--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "financial-identifiers",
     "bloomberg"
   ],
-  "author": "",
+  "author": "Viktor Larsson <viktorsarstrom@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -58,11 +58,17 @@
     "url": "https://github.com/viktorlarsson/openfigi/issues"
   },
   "homepage": "https://github.com/viktorlarsson/openfigi#readme",
+  "funding": "https://github.com/sponsors/viktorlarsson",
+  "engines": {
+    "bun": ">=1.0.0",
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
     "@types/node": "^25.0.9",
+    "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
