--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.6",
   "description": "Unofficial TypeScript SDK for OpenFIGI API - Map financial identifiers to FIGIs (community-maintained)",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "publishConfig": {
     "access": "public",
@@ -13,8 +13,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
@@ -23,13 +23,13 @@
     "LICENSE"
   ],
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup",
+    "dev": "tsdown --watch",
+    "build": "tsdown",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "lint": "biome check --write .",
-    "format": "biome format --write .",
+    "lint": "bun node_modules/oxlint/dist/cli.js --fix .",
+    "format": "bun node_modules/oxlint/dist/cli.js --fix .",
     "typecheck": "tsc --noEmit",
     "docs": "typedoc",
     "changeset": "changeset",
@@ -64,13 +64,13 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
     "@types/node": "^25.0.9",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "^4.0.17",
-    "tsup": "^8.5.1",
+    "oxlint": "^1.0.0",
+    "tsdown": "^0.9.0",
     "tsx": "^4.21.0",
     "typedoc": "^0.28.16",
     "vitest": "^4.0.17"
