fix: use bun --bun for oxlint to avoid node ESM issues

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "lint": "bun node_modules/oxlint/dist/cli.js --fix .",
-    "format": "bun node_modules/oxlint/dist/cli.js --fix .",
+    "lint": "bun --bun oxlint --fix .",
+    "format": "bun --bun oxlint --fix .",
     "typecheck": "tsc --noEmit",
     "docs": "typedoc",
     "changeset": "changeset",
