feat: convert to monorepo and add MCP server package
- Restructure as monorepo using Turborepo for build orchestration
- Move SDK to packages/openfigi-sdk
- Add packages/openfigi-mcp with Model Context Protocol server
- MCP server exposes map_identifiers and search tools
- Update CI workflows for monorepo structure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run tests
-        run: bun test
+        run: bun run test
 
       - name: Run linter
         run: bun run lint
@@ -50,8 +50,8 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: bunx changeset publish
-          commit: 'chore: release package'
-          title: 'chore: release package'
+          commit: 'chore: release packages'
+          title: 'chore: release packages'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
