--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,40 +36,16 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Upload coverage
+      - name: Upload SDK coverage
         uses: actions/upload-artifact@v4
         if: matrix.bun-version == '1.x'
         with:
-          name: coverage
-          path: coverage/
+          name: coverage-sdk
+          path: packages/openfigi-sdk/coverage/
 
-  release:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Upload MCP coverage
+        uses: actions/upload-artifact@v4
+        if: matrix.bun-version == '1.x'
         with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build
-        run: bun run build
-
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: bun run release
-          version: bunx changeset version
-          commit: 'chore: release'
-          title: 'chore: release'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          name: coverage-mcp
+          path: packages/mcp/coverage/
