--- a/package.json
+++ b/package.json
@@ -1,92 +1,28 @@
 {
-  "name": "openfigi-sdk",
-  "version": "1.1.1",
-  "description": "Unofficial TypeScript SDK for OpenFIGI API - Map financial identifiers to FIGIs (community-maintained)",
+  "name": "openfigi-monorepo",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      },
-      "default": "./dist/index.js"
-    },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
+  "packageManager": "bun@1.2.16",
+  "workspaces": ["packages/*"],
   "scripts": {
-    "dev": "tsdown --watch",
-    "build": "tsdown",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "lint": "bun --bun oxlint --fix .",
-    "format": "bun --bun oxlint --fix .",
-    "typecheck": "tsc --noEmit",
-    "docs": "typedoc",
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "bun run build && bun run test && bunx changeset publish",
-    "prepublishOnly": "bun run build && bun run test && bun run lint && bun run typecheck",
-    "pre-publish": "bun scripts/pre-publish.ts"
-  },
-  "keywords": [
-    "openfigi",
-    "figi",
-    "finance",
-    "api",
-    "sdk",
-    "typescript",
-    "financial-identifiers",
-    "bloomberg"
-  ],
-  "author": "Viktor Larsson <viktorsarstrom@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/viktorlarsson/openfigi.git"
-  },
-  "bugs": {
-    "url": "https://github.com/viktorlarsson/openfigi/issues"
-  },
-  "homepage": "https://github.com/viktorlarsson/openfigi#readme",
-  "funding": "https://github.com/sponsors/viktorlarsson",
-  "engines": {
-    "bun": ">=1.0.0",
-    "node": ">=18.0.0"
+    "release": "turbo run build && turbo run test && bunx changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
-    "@types/bun": "^1.3.6",
-    "@types/node": "^25.0.9",
-    "@vitest/coverage-v8": "^4.0.17",
-    "@vitest/ui": "^4.0.17",
-    "oxlint": "^1.0.0",
-    "tsdown": "^0.9.0",
-    "tsx": "^4.21.0",
-    "typedoc": "^0.28.16",
-    "vitest": "^4.0.17"
-  },
-  "peerDependencies": {
+    "turbo": "^2.5.3",
     "typescript": "^5.9.3"
   },
-  "dependencies": {
-    "ky": "^1.14.2",
-    "zod": "^4.3.5"
+  "engines": {
+    "bun": ">=1.0.0",
+    "node": ">=18.0.0"
   }
 }
