fix: use bun publish for workspace dependency resolution
- Revert to workspace:* for local development
- Update release script to use bun publish instead of changeset publish
- Bun publish automatically resolves workspace:* to actual versions

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typecheck": "turbo run typecheck",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "turbo run build && turbo run test && bunx changeset publish"
+    "release": "turbo run build && turbo run test && bun publish --access public packages/openfigi-sdk && bun publish --access public packages/mcp"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
