fix: use bun publish for workspace:* dependency resolution
- Revert openfigi-sdk dependency to workspace:* for local development
- Add ci:version script that runs bun update after changeset version
- Add ci:publish script that uses bun publish per package
- Update release workflow to use new scripts

bun publish automatically resolves workspace:* to actual npm versions,
while bun update syncs the lockfile after version bumps.

Ref: https://ianm.com/posts/2025-08-18-setting-up-changesets-with-bun-workspaces

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,8 +49,8 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          version: bunx changeset version
-          publish: bun run release
+          version: bun run ci:version
+          publish: bun run ci:publish
           commit: 'chore: release packages'
           title: 'chore: release packages'
         env:
