feat(mcp): add MCP Registry support
Add mcpName field and server.json for publishing to the official
MCP Registry at registry.modelcontextprotocol.io

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openfigi-mcp",
   "version": "0.2.3",
+  "mcpName": "io.github.viktorlarsson/openfigi",
   "description": "MCP server for OpenFIGI API - Map financial identifiers to FIGIs via Model Context Protocol",
   "type": "module",
   "main": "./dist/index.js",
