--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -64,6 +64,7 @@
     "node": ">=16.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "@vitest/coverage-v8": "^4.0.17",
     "oxlint": "^1.0.0",
@@ -75,6 +76,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1",
+    "express": "^5.2.1",
     "openfigi-sdk": "workspace:*",
     "undici": "^5.29.0"
   }
